CNCS Dev 12/src/objects/Layer_2__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <inlineHelpText>Please Enter your Address</inlineHelpText>
        <label>Address Line 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <inlineHelpText>Please Enter Address</inlineHelpText>
        <label>Address Line 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Corporation_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Corporation Code</label>
        <referenceTo>Corporation__c</referenceTo>
        <relationshipLabel>Layer 2</relationshipLabel>
        <relationshipName>Service_Streams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporation_Name__c</fullName>
        <formula>Corporation_Code__r.Corporation_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Corporation Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_First_Name__c</fullName>
        <formula>Director_last_name__r.First_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Director_ID__c</fullName>
        <formula>Director_last_name__r.Director_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Director ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_Title__c</fullName>
        <formula>Director_last_name__r.Director_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Director Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Director_last_name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Name</label>
        <referenceTo>Director__c</referenceTo>
        <relationshipLabel>Layer 2</relationshipLabel>
        <relationshipName>Service_Streams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Layer_2_Code__c</fullName>
        <label>Layer 2 Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notice_Approval_Workflow_Setup__c</fullName>
        <label>Notice Approval Workflow Setup?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Organization_Code1__c</fullName>
        <formula>Organization_Code__r.Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Organization Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Organization Name</label>
        <referenceTo>Org__c</referenceTo>
        <relationshipLabel>Layer 2</relationshipLabel>
        <relationshipName>Service_Streams</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Layer 2</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Layer 2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Layer 2</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>